# pydrugshortagesca

./: .gitignore  README.md  pyproject.toml
pydrugshortagesca/: api.py  cli.py  export.py
tests/: test_api.py  test_export.py
